--- a/src/components/FeedbackOptions/FeedbackOptions.module.css
+++ b/src/components/FeedbackOptions/FeedbackOptions.module.css
@@ -1,3 +1,9 @@
+
+.mainDiv{
+display: flex;
+justify-content: center;
+} 
+
 button {
     background-color: #4caf50;
     color: white;
@@ -10,7 +16,6 @@ button {
     transition: background-color 0.3s ease;
   }
   
-  /* Specific styles for each button */
   button.neutral {
     background-color: #fdd835;
   }
